<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlanHub</string>
    <string name="home_title">Explore the world!</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="malls">Malls</string>
    <string name="amusements">Amusements</string>
    <string name="nature">Nature</string>
    <string name="food">Food</string>
    <string name="hotels">Hotels</string>
    <string name="recommendation">Recommendations</string>
    <string-array name="top_places">
        <item>Lau Pa Sat;18 Raffles Quay;Singapore;Lau Pa Sat — where history, heritage architecture, and delectable local food blends seamlessly in a must-visit food and retail destination for both locals and visitors. With a rich 130-year history, this distinctive octagonal architectural masterpiece stands as a timeless icon and proud showpiece of Singapore’s skyline. Designated as a national monument on June 28, 1973, Lau Pa Sat is a true Singaporean landmark. As one of Singapore’s largest hawker centers spanning over 52,000 square feet and housing more than 80 hawkers and tenants, visitors are invited to revel in the elegant old-world charm of Singapore’s \'Best Looking\' Food Hall. Lau Pa Sat houses Singapore’s most iconic hawker center,;4.0;https://media-cdn.tripadvisor.com/media/photo-s/2a/12/53/26/lau-pa-sat.jpg</item>
        <item>National Orchid Garden;1 Cluny Rd Within the Singapore Botanic Gardens;Singapore;With over 1000 species and 2000 hybrids on display, the splendour of these gorgeous blooms is absolutely a sight to behold at the National Orchid Garden.;4.5;https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Entrance_National_Orchid_Garden_Singapore_Feb23_D72_25450.jpg/1200px-Entrance_National_Orchid_Garden_Singapore_Feb23_D72_25450.jpg</item>
        <item>Park Royal Collection;6 Raffles Boulevard,Singapore;Sitting in the heart of the central business district and Marina Bay, with panoramic views of the Singapore city skyline, the 583-room PARKROYAL COLLECTION Marina Bay, Singapore is the country’s first ‘Garden-in-a-Hotel’. An champion of sustainability, environmental responsibility and advocate for green innovations in the hospitality industry, the hotel is home to Southeast Asia’s largest indoor sky-lit atrium, containing over 2,400 plants, trees, shrubs and groundcovers from more than 60 varieties of flora spread across 15,000 square feet of space throughout. Distinctive dining options are available for every palate and occasion, from international and Asian culinary creations at Peppermint, progressive Cantonese cuisine at Peach Blossoms, a selection of over 90 varieties of whiskies and craft cocktails at Portman’s Bar, and alfresco dining at Skyline Bar. A rooftop Urban Farm spanning 150 square metres houses over 60 varieties of fruits, vegetables, herbs and edible flowers, forming the backbone of the hotel’s farm-to-table, farm-to-bar and farm-to-spa concepts. The 25-metre swimming pool comes alive with 1,380 glowing fibre optic lights at dusk, and a refreshing dip in the pool articulates an experience not unlike the sensation of floating amongst a star-studded galaxy. Catering to environmentally conscious travellers, the hotel focuses on stylish contemporary vibes brought to life through biophilic design, iconic architecture, eco-friendliness and lifestyle experiences.;4.5;https://dynamic-media-cdn.tripadvisor.com/media/photo-o/21/53/52/ba/sky-bridge.jpg?w=700</item>
        <item>Singapore Botanic Gardens;1 Cluny Road;Singapore;This national park is open daily and features beautiful lakes, animals, flowers and plants, including one of the region\'s first rubber tree orchards.;4.5;https://www.visitsingapore.com/content/dam/desktop/global/see-do-singapore/nature-wildlife/singapore-botanic-gardens-carousel01-rect.jpg</item>
        <item>Jewel Changi Airport;78 Airport Boulevard;Singapore;This national park is open daily and features beautiful lakes, animals, flowers and plants, including one of the region\'s first rubber tree orchards.;4.5;https://media.timeout.com/images/105744422/image.jpg</item>
        <item>National Museum of Singapore;93 Stamford Road National Museum of Singapore;Singapore;
The National Museum of Singapore is the oldest museum in Singapore, tracing its roots back to 1849. Located in the heart of the city, it is a cultural institution dedicated to preserving the heritage and history of Singapore. The museum showcases a diverse range of exhibits, artifacts, and interactive displays that chronicle the island nation\'s rich past, from its early days as a trading port to its emergence as a modern metropolis. Visitors can explore various galleries that cover topics such as Singapore\'s colonial history, cultural diversity, and significant milestones. With its engaging exhibitions and immersive experiences, the National Museum of Singapore offers a compelling journey through the nation\'s story, making it a must-visit destination for locals and tourists alike.;4.5;https://media.timeout.com/images/101805235/image.jpg</item>
        <item tools:ignore="TypographyDashes">Singapore River Cruise;CLARK QUAY JETTY;Singapore;Cruising since 1987. For more than a decade and a half, bumboats have been plying the Singapore River. The story of Singapore River Cruise begins in 1987. The "Clean Rivers Campaign" of 1983 saw the relocation of bumboats to Pasir Panjang. The familiar painted faces of our Bumboats were due to disappear from its home, until SRC was awarded the tender license to run river services here - the first also, to operate such services along the river. We are entering a new chapter in the Singapore River story. In this modern age, Bumboats on this historic waterway remind us of its rustic charm. SRC has been preserving the heritage of this important river for more than two decades. Its bumboats have become the icon of our river to visitors and locals alike. 2008 was a year when our iconic bumboats underwent a transformation. The diesel-powered engines of SRC\'s fleet made way for a new generation of electric ones that boast quieter engines and zero CO2 emissions. These are the very boats that operate along the Singapore River today. SRC is committed to greater excellence. Under its strong management, the company has developed a firm network of channel intermediaries from government agencies, embassies, event organizers and other operators in the tourism sector, both local and overseas. From a humble fleet of 4 bumboats in 1987, SRC has since increased its number to 24 today with a few new additions coming onboard soon.;4.0;https://res.klook.com/images/fl_lossy.progressive,q_65/c_fill,w_1295,h_720/w_80,x_15,y_15,g_south_west,l_Klook_water_br_trans_yhcmh3/activities/pzahsj8bznfy22dt2pnb/SingaporeRiverCruise.jpg</item>
    </string-array>
    <string name="notification_bell">Notifcation Button</string>
    <string name="top_reached">top_reached</string>
    <string name="drag_handler">drag handler</string>
    <string name="description">Description</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu amet tempor, in massa, habitasse habitasse fermentum, sed faucibus. Augue arcu, ac proin accumsan urna morbi diam nunc, tincidunt. Ac turpis amet vitae dui aliquam vitae nunc. Non enim, lorem duis maecenas odio Read More </string>
    <string name="about">About</string>
    <string name="photos">Photos</string>
    <string name="reviews">Google Reviews</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="placeImg">place image</string>
    <string name="backbtn">back button</string>
    <string name="itinerary">Itinerary:</string>
    <string name="tobringitems">To Bring:</string>
    <string name="note">Notes:</string>
    <string name="remidners">Reminders:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="Enter_event_name">Enter event name</string>
    <string name="Enter_Notes">Enter Note</string>
    <string name="EVENT_ID">Event ID: </string>
    <string name="EVENT_NAME">Event Name: </string>
    <string name="EVENT_CAT">Category: </string>
    <string name="select_time">Select Time</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>