<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EMitineraryAddEventNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_event_name"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EMitineraryAddEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/EMitineraryTimeNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@id/EMitineraryAddEventNameContainer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="17sp"
                android:text="@string/start_time"/>

            <Button
                android:id="@+id/EMitineraryStartTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:backgroundTint="@color/orange"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="17sp"
                android:text="@string/end_time"/>

            <Button
                android:id="@+id/EMitineraryEndTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:backgroundTint="@color/orange"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EMitineraryAddNotesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Notes"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_below="@id/EMitineraryTimeNameContainer"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EMitineraryAddNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>
