<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:background="@drawable/rounded_border">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/EVENT_ID"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />
        <TextView
            android:id="@+id/VEEventID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            />

        <ImageView
            android:id="@+id/VEDelteEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_delete_24"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/EVENT_NAME"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />


        <TextView
            android:id="@+id/VEEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/EVENT_CAT"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />


        <TextView
            android:id="@+id/VEEventCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:id="@+id/VEEventItinerary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:minHeight="30dp"
        android:maxHeight="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tobringitems"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/VEEventItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:minHeight="20dp"
        android:maxHeight="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attachments:"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:id="@+id/VEEventImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:minHeight="20dp"
        android:maxHeight="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:id="@+id/VEEventNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:minHeight="20dp"
        android:maxHeight="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        >

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remidners"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:id="@+id/VEEventRemidners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:minHeight="20dp"
        android:maxHeight="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        >

    </LinearLayout>





</LinearLayout>