<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ViewPlaceActivity">

<!--    Top Place Photo Image Background -->
    <ImageView
        android:id="@+id/backgroundTopPlacePhotoImage"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/placeImg" />

    <ImageButton
        android:id="@+id/viewPlaceBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/back_btn_icon"
        android:background="@drawable/circular_btn_bg"
        android:padding="10dp"
        android:contentDescription="@string/backbtn"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeDetailsSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/view_activity_scrollview_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundTopPlacePhotoImage">

        <TextView
            android:id="@+id/placeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="50dp"
            android:paddingBottom="18dp"
            android:text="Name of Place"
            android:textColor="@color/main_app_orange"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="45dp"
            android:paddingEnd="5dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/placeLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeLocation"
            app:srcCompat="@drawable/view_place_location_marker" />


        <TextView
            android:id="@+id/placeLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:maxWidth="250dp"
            android:paddingBottom="20dp"
            android:text="Location of Place"
            android:textColor="@color/view_place_font_color"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/locationIcon"
            app:layout_constraintTop_toBottomOf="@id/placeName" />

        <!--        <ImageView-->
        <!--            android:id="@+id/starIcon"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/locationIcon"-->
        <!--            app:srcCompat="@drawable/view_place_star_icon"-->
        <!--            android:paddingEnd="5dp"-->
        <!--            android:paddingBottom="20dp"-->
        <!--            android:paddingStart="50dp"-->
        <!--            />-->

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="50dp"
            android:paddingBottom="20dp"
            android:text="4.8"
            android:textColor="@color/view_place_font_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:paddingBottom="20dp"
            android:layout_marginStart="10dp"
            android:rating="0"
            android:stepSize="0.5"
            android:scaleX="1"
            android:scaleY="1"
            android:progressTint="@color/main_app_orange"
            app:layout_constraintStart_toEndOf="@id/ratingText"
            app:layout_constraintTop_toBottomOf="@id/locationIcon" />

        <TextView
            android:id="@+id/aboutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@color/view_place_font_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingText" />

        <View
            android:id="@+id/lineDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lineDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutBtn" />

        <View
            android:id="@+id/aboutBtnLine"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/main_app_orange"
            app:layout_constraintEnd_toEndOf="@id/aboutBtn"
            app:layout_constraintStart_toStartOf="@id/aboutBtn"
            app:layout_constraintTop_toTopOf="@id/lineDivider" />


        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="50dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/description"
            android:textColor="@color/main_app_orange"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineDivider" />

        <ScrollView
            android:id="@+id/descriptionContent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle">

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/view_place_font_color"
                android:paddingHorizontal="50dp"
                android:text="@string/sample_text" />

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addToPlanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/view_place_add_to_plan_btn"
            android:backgroundTint="@color/main_app_orange"
            android:fontFamily="@font/roboto_bold"
            android:paddingVertical="10dp"
            android:text="@string/add_to_plan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>